cmake_minimum_required(VERSION 3.22)
project(untitled3)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled3 main.cpp)
add_executable(test sohil.cpp)
add_executable(hash hash.cpp)
add_executable(stl test.cpp)
add_executable(day3_check_sorted_arrya day3.cpp day10.cpp day12.cpp)
add_executable(day4_remove_duplicates day4.cpp)
add_executable(day5_move_zeros day5_move_zeros.cpp)
add_executable(day5_linear_search day5.cpp)
add_executable(day7_union day7.cpp)
add_executable(day8_count1s day8.cpp)
add_executable(day9_count_singles day9.cpp)
add_executable(day10_longest_subarray day10.cpp)
add_executable(day11_sort01 day11.cpp)
add_executable(day_12_twosum day12.cpp)
