cmake_minimum_required(VERSION 3.22)
project(untitled3)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled3 main.cpp)
add_executable(test sohil.cpp)
add_executable(hash hash.cpp)
add_executable(stl test.cpp)
add_executable(day3_check_sorted_arrya day3.cpp)
add_executable(setDataStructure setDataStructure.cpp)
add_executable(day4_remove_duplicates day4.cpp)
add_executable(day5_move_zeros day5_move_zeros.cpp)
add_executable(day5_linear_search day5.cpp)
add_executable(day7_union day7.cpp)
add_executable(day8_count1s day8.cpp)
add_executable(day9_count_singles day9.cpp)
add_executable(day10_longest_subarray day10.cpp)
add_executable(day11_sort01 day11.cpp)
add_executable(day_12_twosum day12.cpp)
add_executable(day_13_marjority day13.cpp)
add_executable(day14_max_subarray day14.cpp)
add_executable(day15_matrix day15.cpp)
add_executable(maximumSubArray_day16 maximumSubArray_day16.cpp)
add_executable(day16_PascalTriangle day16_PascalTriangle.cpp)
add_executable(day17_BS day17_BS.cpp)
add_executable(day18 day18.cpp)
