cmake_minimum_required(VERSION 3.22)
project(untitled3)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled3 main.cpp)
add_executable(test sohil.cpp)
add_executable(hash hash.cpp)
add_executable(stl test.cpp)
add_executable(day3_check_sorted_arrya day3.cpp)
add_executable(setDataStructure setDataStructure.cpp)
add_executable(day4_remove_duplicates day4.cpp)
add_executable(day5_move_zeros day5_move_zeros.cpp)
add_executable(day5_linear_search day5.cpp)
add_executable(day7_union day7.cpp)
add_executable(day8_count1s day8.cpp)
add_executable(day9_count_singles day9.cpp)
add_executable(day10_longest_subarray day10.cpp)
add_executable(day11_sort01 day11.cpp)
add_executable(day_12_twosum day12.cpp)
add_executable(day_13_marjority day13.cpp)
add_executable(day14_max_subarray day14.cpp)
add_executable(day15_matrix day15.cpp)
add_executable(maximumSubArray_day16 maximumSubArray_day16.cpp)
add_executable(day16_PascalTriangle day16_PascalTriangle.cpp)
add_executable(day17_BS day17_BS.cpp)
add_executable(day18 day18.cpp)
add_executable(day19_rotatedArray day19_rotatedArray.cpp)
add_executable(bs_medium_sqrt bs_medium_sqrt.cpp MedianOf2array.cpp day24LLMediumQes.cpp understandingClass.cpp)
add_executable(kokoEatingBanana_bs kokoEatingBanana_bs.cpp)
add_executable(shipping_containers shipping_containers.cpp)
add_executable(MedianOf2array MedianOf2array.cpp)
add_executable(BasicString BasicString.cpp)
add_executable(day20_LinkedListBasics day20_LinkedListBasics.cpp)
add_executable(day21LinkedList2 day21LinkedList2.cpp)
add_executable(day22_DLLBasics day22_DLLBasics.cpp)
add_executable(day23LLQes day23LLQes.cpp)
add_executable(day24LLMediumQes day24LLMediumQes.cpp)
add_executable(understandingClass understandingClass.cpp)
add_executable(basics BItManupalation/basics.cpp Trees/TreesIntro.cpp )
add_executable(stack BItManupalation/stack.cpp)
add_executable(Recursion BItManupalation/Recursion.cpp)
add_executable(NGE BItManupalation/NGEexample.cpp)
add_executable(MonotonicStack BItManupalation/MonotonicStack.cpp)
add_executable(twoPointers BItManupalation/twoPointers.cpp)
add_executable(Revision1 BItManupalation/Revision1.cpp)
add_executable(GreedyAlgo BItManupalation/Greedy.cpp)
add_executable(Trees Trees/TreesIntro.cpp)
add_executable(zigzag Trees/Treezigzagtraversal.cpp)



